--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,12 @@ select {
     padding: 5px;
 }
 
+select#tipoReserva {
+    width: auto;
+    max-width: 200px;
+    height: 34px;
+}
+
 .seating-controls {
     display: flex;
     flex-direction: column;
